[package]
name = "rit"
version = "0.1.0"
edition = "2021"
authors = ["Sudeep Ranjan Sahoo <sudeep.ranjan.sahoo@example.com>"]
description = "A Git implementation in Rust for educational purposes"
readme = "README.md"
license = "MIT"
keywords = ["git", "vcs", "version-control", "rust"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/srs-sudeep/rit"
homepage = "https://github.com/srs-sudeep/rit"
documentation = "https://srs-sudeep.github.io/rit"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Cryptographic hashing (SHA-1)
sha1 = "0.10"

# Compression (zlib)
flate2 = "1.0"

# Hex encoding/decoding
hex = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Directory walking
walkdir = "2.4"

# JSON serialization for index
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Temporary directories for testing
tempfile = "3.10"

[lib]
name = "rit"
path = "src/lib.rs"

[[bin]]
name = "rit"
path = "src/main.rs"
